--- a/core/src/main/res/layout/fragment_error_bottom_sheet_dialog.xml
+++ b/core/src/main/res/layout/fragment_error_bottom_sheet_dialog.xml
@@ -40,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
-        app:srcCompat="@drawable/error" />
+        app:srcCompat="@drawable/img_error" />
 
     <TextView
         android:id="@+id/tv_error_message"
