--- a/home/src/main/res/menu/nav_menu.xml
+++ b/home/src/main/res/menu/nav_menu.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/ic_add_circle"
         android:title="@string/add_story" />
     <item
+        android:id="@+id/navigation_map"
+        android:icon="@drawable/ic_map"
+        android:title="@string/stories_location" />
+    <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_person"
         android:title="@string/profile" />
